--- a/requirements-dl.txt
+++ b/requirements-dl.txt
@@ -1,5 +1,5 @@
-tensorflow==2.7
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==1.11.0
 torchvision==0.12.0
 torchaudio==0.11.0
+tensorflow
