--- a/requirements-dl.txt
+++ b/requirements-dl.txt
@@ -2,3 +2,6 @@
 torch==1.11.0
 torchvision==0.12.0
 torchaudio==0.11.0
+tensorflow; platform_machine == "x86_64"
+--extra-index-url https://tf.kmtea.eu/whl/stable.html
+tensorflow-aarch64; platform_machine == "aarch64"
