--- a/requirements-dl.txt
+++ b/requirements-dl.txt
@@ -1,6 +1,6 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch==1.11.0
-torchvision==0.12.0
-torchaudio==0.11.0
-tensorflow; platform_machine == "x86_64"
-tensorflow-aarch64; platform_machine == "aarch64"
+torch==1.12.0
+torchvision==0.13.0
+torchaudio==0.12.0
+tensorflow==2.9.1; platform_machine == "x86_64"
+tensorflow-aarch64==2.9.1; platform_machine == "aarch64"
