--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       # https://github.com/marketplace/actions/build-and-push-docker-images
-      - name: Build and push jamesbalamuta/grader-dl
+      - name: Build and push jamesbalamuta/workspace-dl-jupyterlab
         uses: docker/build-push-action@v2 
         with:
           platforms: linux/amd64,linux/arm64
